# codebase-feature-planner

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
api/: main.py
core/: agent.py  history.py  ingest.py  models.py  retrieve.py  tools.py
ui/: package-lock.json  package.json  tailwind.config.ts
ui/app/: layout.tsx  page.tsx
ui/app/components/: ChainOfThought.tsx
