[project]
name = "codebase-feature-planner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "chromadb",
    "sentence-transformers",
    "rank-bm25",
    "groq",
    "python-dotenv",
    "pydantic",
    "pathspec>=1.1.1",
]
